[package]
name = "kg-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5.3"
async-trait = "0.1.80"
axum = { version = "0.7", features = ["tower-log"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
hmac = "0.11.0"
jwt = "0.15.0"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
sha2 = "0.9.8"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
    "chrono",
] }
thiserror = "1"
time = "0.3.36"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.2", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
] }
uuid = { version = "1.9.1", features = ["serde"] }
