[package]
name = "kg-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1.80"
axum = { version = "0.7", features = ["multipart", "tower-log"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
clap = { version = "4.5.7", features = ["derive", "env"] }
dotenvy = "0.15"
env_logger = "0.11.3"
hex = "0.4.3"
hmac = "0.11"
image = "0.25.1"
jwt = "0.15.0"
log = "0.4.21"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.2", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
    "fs",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.9.1", features = ["serde"] }
